zeit.cms changes
================

1.0b2 (unreleased)
------------------

- Die Channel-Ansicht geht nicht mehr kaputt, wenn ein Objekt ohne Titel
  syndiziert wurde (bug #4312).
- Entfernen von Links aus Channels stabilisiert.
- Assets-Popup: Einklappen/Ausklappen des Baumens ohne Zugriff auf
  WebDAV-Server.

1.0b1 (2008-06-26)
------------------

- Styling des globalen Drop-Down-Menus
- Menu im Metadaten-Preview funktioniert wieder.
- Sortieren bestimmter Channels geht wieder (bug #4302).
- Metadaten-Vorschau bei Bilderguppen zeigt Thumbnails der Bilder.
- Bildergruppe geht nicht kaputt, wenn ein Ordner zur Bildergruppe wird, der
  nicht nur Bilder enthält (bug #4301).
- Asset-Views bei Center-Page (bug #4306).
- SyndicatedIn-Source war optimistisch über den Inhalt und ging bei
  "unbekannten Resourcen" kaputt (bug #4300).
- DailyNL in den Standard-Metadaten (bug #4307).
- JS-Warnung, wenn kein Firefox verwendet wird (bug #4305).
- Popup-Asset/Image-Browser expandiert den automatisch Baum wenn man in einem 
  Ordner drin ist.
- date-last-modified als webdav-property für XML-Inhalte (bug #4310).

0.9.22 (2008-06-23)
-------------------

- Die Relateds werden beim Ändern des relateds nicht mehr doppelt in den
  Channel eingetragen (bug #4293).
- Globale Menus umgebaut, so dass weniger wichtige Eintrage in einem Dropdown
  verfügbar sind.
- Manuelles einstellen von Jahr/Ausgabe (bug #4273).
- Bilderordner beim Asset-Bearbeiten wird jetzt durch manuell eingestelltes
  Jahr/Ausgabe bestimmt. Auf jedem Ordner kann durch die WebDAV-Property
  {http://namespaces.zeit.de/CMS/Image}base-folder bestimmt werden wo die
  Wurzel für den Bereich ist (z.B. /zuender ->
  http://xml.zeit.de/bilder/zuender/)
- Kein Fehler mehr beim Bearbeiten von Objekten, die nicht mehr im Repository
  existieren (bug #4291).
- Biga hat jetzt Assets (bug #4294).
- Biga hat jetzt <gallery> als Root-Tag (bug #4295).
- Metadaten bearbeiten: Spitzmarke füllt Kurzteasertitel und Titel füllt